--- a/.gitmodules
+++ b/.gitmodules
@@ -13,7 +13,7 @@
 [submodule "ros2_ws/src/crazyswarm2"]
 	path = ros2_ws/src/crazyswarm2
 	url = https://github.com/AkashJohnSubash/crazyswarm2.git
-	branch = sitl
+	branch = master
 [submodule "ros2_ws/src/motion_capture_tracking"]
 	path = ros2_ws/src/motion_capture_tracking
 	url = https://github.com/IMRCLab/motion_capture_tracking.git
