--- a/.gitmodules
+++ b/.gitmodules
@@ -18,3 +18,7 @@
 	path = ros2_ws/src/motion_capture_tracking
 	url = https://github.com/IMRCLab/motion_capture_tracking.git
 	branch = ros2
+[submodule "ros2_ws/src/LocalPlanDrone"]
+	path = ros2_ws/src/LocalPlanDrone
+	url = git@github.com:AkashJohnSubash/LocalPlanDrone.git
+	branch = main_ros
